fix(ng-deep): wrap with host

--- a/src/app/xm-entity/entity-card/entity-card.component.scss
+++ b/src/app/xm-entity/entity-card/entity-card.component.scss
@@ -28,7 +28,7 @@
     border-radius: 50%;
 }
 
-::ng-deep {
+:host ::ng-deep {
     .card {
         &-menu {
             position: absolute;
