--- a/src/app/xm-entity/location-detail-dialog/location-detail-dialog.component.scss
+++ b/src/app/xm-entity/location-detail-dialog/location-detail-dialog.component.scss
@@ -1,4 +1,4 @@
-::ng-deep {
+:host ::ng-deep {
     ngx-mat-select-search {
         display:       block;
         margin-bottom: 7px;
