--- a/src/app/xm-entity/states-management-dialog/states-management-dialog.component.scss
+++ b/src/app/xm-entity/states-management-dialog/states-management-dialog.component.scss
@@ -1,4 +1,4 @@
-::ng-deep {
+:host ::ng-deep {
     .states-management {
         &__results {
             overflow-y: auto;
